--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,3 +1,13 @@
 ---
 title: Portfolio
 ---
+
+<dl>
+<% data.portfolio.recent.each do |site| %>
+ <dt><%= site[1]['name'] %></dt>
+<dd>
+  <%= site[1]['url'] %>
+  <p><%= site[1]['description'] %></p>
+</dd>
+<% end %>
+</dl>
