--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -2,12 +2,52 @@
 title: Portfolio
 ---
 
+<h2>Since 2010</h2>
 <dl>
 <% data.portfolio.recent.each do |site| %>
  <dt><%= site[1]['name'] %></dt>
-<dd>
+ <dd>
   <%= site[1]['url'] %>
   <p><%= site[1]['description'] %></p>
+  <ul class="roles">
+    <% site[1]['role'].each do |role| %>
+    <li><%= role %></li>
+    <% end %> 
+  </ul>
+ </dd>
+<% end %>
+</dl>
+<h2>2006 - 2010</h2>
+<dl>
+<% data.portfolio.less_recent.each do |site| %>
+ <dt><%= site[1]['name'] %></dt>
+ <dd>
+  <%= site[1]['url'] %>
+  <p><%= site[1]['description'] %></p>
+  <ul class="roles">
+    <% site[1]['role'].each do |role| %>
+    <li><%= role %></li>
+    <% end %> 
+  </ul>
 </dd>
 <% end %>
 </dl>
+
+<h2>R.I.P.</h2>
+<dl>
+<% data.portfolio.rip.each do |site| %>
+  <dt><%= site[1]['name'] %></dt>
+  <dd>
+    <p><%= site[1]['description'] %></p>
+    <ul class="roles">
+      <% site[1]['role'].each do |role| %>
+      <li><%= role %></li>
+      <% end %> 
+    </ul>
+  </dd>
+<% end %>
+</dl>
+
+
+<h2>Pre-2006</h2>
+<p>Need details? I'll recall some at your request.</p>
