Adding Web fonts; proper h1 on partial

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,6 +8,7 @@
     
     <title>Two Banjos At Once. <%= current_page.data.title %></title>
     <%= favicon_tag "/favicon.ico?v=3" %>
+    <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Josefin+Sans:600|Montserrat:400,700' %>
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= javascript_include_tag  "all" %>
    
