--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,7 +5,7 @@
     
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Two Banjos At Once. <%= current_page.data.title %></title>
     <%= favicon_tag "/favicon.ico?v=3" %>
     <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Josefin+Sans:600|Montserrat:400,700' %>
@@ -15,8 +15,10 @@
   </head>
   
   <body class="<%= page_classes %>">
+    <div class="wrapper">
     <%= partial '/nav' %>
     <%= yield %>
     <%= partial '/footer' %>
+    </div>
   </body>
 </html>
