Setting up grid. Garish colors to see blocks.

--- a/source/_default.html.erb
+++ b/source/_default.html.erb
@@ -1,6 +1,6 @@
 
     <div class="vcard" id="hcard-Melanie-Archer">
-      <h1>
+      <h1 class="header">
         <span class="fn">
           Melanie Archer 
         </span>
@@ -16,12 +16,12 @@
           </a>
         </li>
         <li>
-          <a   href="//www.linkedin.com/in/mejarc">
+          <a href="//www.linkedin.com/in/mejarc">
             LinkedIn 
           </a>
         </li>
         <li>
-          <a  href="//github.com/mejarc">
+          <a href="//github.com/mejarc">
             GitHub
           </a>
         </li>
