--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,4 +1,4 @@
-    <footer class="global">
+    <footer class="footer">
       <p>
       All content &copy;1998  &#8211; <%= footer_date %><%= link_to 'Melanie Archer', 'http://about.me/melanie.archer' %>, unless otherwise indicated.
       </p>
