--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -1,8 +1,8 @@
-    <nav>
-      <ul>
-        <li><%= link_to 'About me', '/about-me.html' %></li>
-        <li><%= link_to 'Portfolio', '/portfolio.html' %></li>
-        <li><%= link_to 'About this web site', '/about-site.html' %></li>
-        <li><%= link_to 'Ping', 'http://about.me/melanie.archer' %></li>
+    <nav class="nav">
+      <ul class="wrapper plain center">
+        <li class="item"><%= link_to 'About me', '/about-me.html' %></li>
+        <li class="item"><%= link_to 'Portfolio', '/portfolio.html' %></li>
+        <li class="item"><%= link_to 'About this web site', '/about-site.html' %></li>
+        <li class="item"><%= link_to 'Ping', 'http://about.me/melanie.archer' %></li>
       </ul>
     </nav>
