--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -1,5 +1,6 @@
-    <nav class="nav">
-      <ul class="wrapper plain center">
+    <nav class="nav" role="navigation">
+      <span aria-hidden="true" class="icon"></span>
+      <ul class="wrapper plain center visually-hidden" aria-hidden="true">
         <li class="item"><%= link_to 'About me', '/about-me.html' %></li>
         <li class="item"><%= link_to 'Portfolio', '/portfolio.html' %></li>
         <li class="item"><%= link_to 'About this web site', '/about-site.html' %></li>
