--- a/source/stylesheets/_layout.css.scss
+++ b/source/stylesheets/_layout.css.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   margin: 0 auto;
   padding: 2vh 2vw;
-  width: 940px;
+  width: $max-width;
 }
 
 /* Set page elements to 100% of viewport width.
