--- a/source/stylesheets/_navigation.css.scss
+++ b/source/stylesheets/_navigation.css.scss
@@ -11,6 +11,12 @@
   display: block;
 }
 
+.item {
+  min-width: 1%;
+  text-align: left;
+  width: 90%;
+}
+
 .visually-hidden {
   clip: rect(0 0 0 0);
   height: 1px;
@@ -35,6 +41,7 @@
   .item {
     margin: 0 0.2vw 0 0;
     min-width: 2.25rem;
+    text-align: center;
     width: auto;
   }
 
@@ -54,15 +61,4 @@
     width: 100%;
   }
 
-}
-/* Utilities.
-*/
-.center {
-  text-align: center;
-}
-
-.plain {
-  font-weight: 400;
-  list-style: none;
-  text-decoration: none;
 }
