Styling Portfolio page

--- a/source/stylesheets/_fonts.css.scss
+++ b/source/stylesheets/_fonts.css.scss
@@ -17,6 +17,10 @@ body {
   text-transform: uppercase;
 }
 
+.header.plain {
+  text-transform: none;
+}
+
 h1 {
   font-size: $medium-font;
   line-height: $medium-font;
