--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,13 +1,14 @@
 ---
 title: Portfolio
 ---
-
-<h2>Since 2010</h2>
+<h1 class="header">Portfolio</h1>
+<h2 class="header plain">Since 2010</h2>
 <dl>
 <% data.portfolio.recent.each do |site| %>
- <dt><%= site[1]['name'] %></dt>
+ <dt>
+  <%= link_to site[1]['name'], site[1]['url'] %>
+  </dt>
  <dd>
-  <%= site[1]['url'] %>
   <p><%= site[1]['description'] %></p>
   <ul class="roles">
     <% site[1]['role'].each do |role| %>
@@ -17,23 +18,24 @@ title: Portfolio
  </dd>
 <% end %>
 </dl>
-<h2>2006 - 2010</h2>
+<h2 class="header plain">2006 - 2010</h2>
 <dl>
 <% data.portfolio.less_recent.each do |site| %>
- <dt><%= site[1]['name'] %></dt>
+ <dt>
+  <%= link_to site[1]['name'], site[1]['url'] %>
+  </dt>
  <dd>
-  <%= site[1]['url'] %>
   <p><%= site[1]['description'] %></p>
   <ul class="roles">
     <% site[1]['role'].each do |role| %>
     <li><%= role %></li>
     <% end %> 
   </ul>
-</dd>
+ </dd>
 <% end %>
 </dl>
 
-<h2>R.I.P.</h2>
+<h2 class="header plain">R.I.P.</h2>
 <dl>
 <% data.portfolio.rip.each do |site| %>
   <dt><%= site[1]['name'] %></dt>
@@ -49,5 +51,5 @@ title: Portfolio
 </dl>
 
 
-<h2>Pre-2006</h2>
+<h2 class="header plain">Pre-2006</h2>
 <p>Need details? I'll recall some at your request.</p>
