--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -3,15 +3,17 @@ $white: #DCD8CF;
 $black: #282827;
 $gray: lighten($black, 70%);
 $red: #E25D33;
+$blue: #368;
 
 $text-color: darken($black, 20%);
-$default-link: #368;
+$default-link: $blue;
 $default-link-shadow: 0 1px 0 rgba($white, .4);
 
 $link-hover: rgba($text-color, .7);
 $link-hover-shadow: 0 1px 0 rgba($gray, .7);
 
 $nav-link-color: $white;
+$nav-link-shadow: 0 1px 0 $black;
 $nav-link-hover-background: lighten($red, .8);
 $nav-link-hover-text: $black;
 $nav-link-hover-shadow: 0 1px 0 rgba($default-link, .6);
