Fixing Capybara test and source

--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,7 +1,7 @@
 ---
 title: Portfolio
 ---
-<h1 class="header">Portfolio</h1>
+<h1 class="header"><%= current_page.data.title %></h1>
 <h2 class="header plain">Since 2010</h2>
 <dl>
 <% data.portfolio.recent.each do |site| %>
