--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -2,7 +2,7 @@
       <span aria-hidden="true" class="icon"></span>
       <ul class="wrapper plain visually-hidden" aria-hidden="true">
         <li class="item"><%= link_to 'About me', '/about-me' %></li>
-        <li class="item"><%= link_to 'Portfolio', '/portfolio.html' %></li>
+        <li class="item"><%= link_to 'Portfolio', '/portfolio' %></li>
         <li class="item"><%= link_to 'About this web site', '/about-site' %></li>
         <li class="item"><%= link_to 'Ping', 'http://about.me/melanie.archer' %></li>
       </ul>
