Closes #6: moving hamburger icon to right of logo

--- a/source/stylesheets/_navigation.css.scss
+++ b/source/stylesheets/_navigation.css.scss
@@ -7,6 +7,9 @@
 .nav .icon {
   font-size: 3rem;
   line-height: .02rem;
+  position: absolute;
+  top: $medium-font * 1.25;
+  right: 4vw;
 }
 
 .nav .icon:before {
