--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -14,13 +14,13 @@ $link-hover-shadow: 0 1px 0 rgba($gray, .7);
 
 $nav-link-color: $white;
 $nav-link-shadow: 0 1px 0 $black;
-$nav-link-hover-background: lighten($red, .8);
+$nav-link-hover-background: lighten($red, 5%);
 $nav-link-hover-text: $black;
 $nav-link-hover-shadow: 0 1px 0 rgba($default-link, .6);
+$nav-link-active-background: mix($red, $blue, 10%);
 
 $header-color: $white;
 $header-shadow: 0 1px 2px $red;
-
 
 $big-font: floor(golden-ratio(12px, 3));
 $medium-font: floor(golden-ratio(12px, 2));
