--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -22,6 +22,10 @@ $nav-link-active-background: mix($red, $blue, 10%);
 $header-color: $white;
 $header-shadow: 0 1px 2px $red;
 
+$header-height-default: 95px;
+$header-height-ipad: 170px;
+$header-height-largest: 200px;
+
 $big-font: floor(golden-ratio(12px, 3));
 $medium-font: floor(golden-ratio(12px, 2));
 $base-font: 16px;
