Updating font to Raleway.

--- a/source/_default.html.erb
+++ b/source/_default.html.erb
@@ -5,11 +5,11 @@
           Melanie Archer 
         </span>
       </h2>
-      <p class="adr">I am a web developer (JavaScript, Ruby, Rails) working on projects near <span class="locality">Oakland</span>, <span class="region">California</span>, <span class="country-name">USA</span>.</p>
+      <p class="adr">I am a front-end developer (JavaScript, CSS) working on projects near <span class="locality">Oakland</span>, <span class="region">California</span>, <span class="country-name">USA</span>.</p>
     </div>
-      <p>Here's <a href="/portfolio">my portfolio</a> of some of the sites I've worked on.</p>
+      
           <ul>
-            <li><a href="//about.me/melanie.archer">Contact me</a></li>
+            <li><a href="mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos">Contact me</a></li>
       <li>
           <a href="//www.twitter.com/mejarc">
             Twitter
