--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,5 +1,5 @@
     <footer class="footer">
       <p>
-      All content &copy;1998  &#8211; <%= footer_date %> <%= link_to 'Melanie Archer', 'http://about.me/melanie.archer' %>, unless otherwise indicated.
+      All content &copy;1998  &#8211; <%= footer_date %> <%= link_to 'Melanie Archer', 'mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos' %>, unless otherwise indicated.
       </p>
     </footer>
