--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -2,8 +2,8 @@
       <span aria-hidden="true" class="icon"></span>
       <ul class="wrapper plain visually-hidden" aria-hidden="true">
         <li class="item"><%= link_to 'About me', '/about-me/' %></li>
-        <li class="item"><%= link_to 'Portfolio', '/portfolio/' %></li>
+    
         <li class="item"><%= link_to 'About this web site', '/about-site/' %></li>
-        <li class="item"><%= link_to 'Ping', 'http://about.me/melanie.archer' %></li>
+        <li class="item"><%= link_to 'Ping', 'mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos' %></li>
       </ul>
     </nav>
