Fix CSS selector; update resume link

--- a/source/_default.html.erb
+++ b/source/_default.html.erb
@@ -25,5 +25,5 @@
             GitHub
           </a>
         </li>
-        <li><a href="https://drive.google.com/file/d/0B1dFkUVACjCpWkhkMTZZT0ZWdFk">R&eacute;sum&eacute; (PDF)</a></li>
+        <li><a href="https://docs.google.com/document/d/1QsPVj1R_JERLxkY-Iyact4BD49UcH0PQPh4idJu1y5Q/edit?usp=sharing">R&eacute;sum&eacute;</a></li>
       </ul>
