Replace golden-ratio with modular-scale

--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -32,7 +32,7 @@ $base-font: 1;
 $big-font: modular-scale(3);
 $medium-font: modular-scale(2);
 
-$base-margin: $base-font;
+$base-margin: 12;
 $base-lineheight: modular-scale(2);
 
 $max-width-default: em(300);
