--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -1,28 +1,27 @@
 $modular-scale-ratio: $perfect-fourth;
 $modular-scale-base: 1.2em;
 
-$white: #dcd8cf;
+$white: #fff;
 $black: #282827;
 $gray: lighten($black, 70%);
-$red: #e25d33;
-$blue: #368;
+$blue: #aadbdf;
 
 $text-color: darken($black, 20%);
-$default-link: $blue;
-$default-link-shadow: 0 1px 0 rgba($white, 0.4);
+$default-link: $black;
+$default-link-shadow: 0 1px 0 rgba($blue, 0.4);
 
 $link-hover: rgba($text-color, 0.7);
 $link-hover-shadow: 0 1px 0 rgba($gray, 0.7);
 
-$nav-link-color: $white;
+$nav-link-color: $black;
 $nav-link-shadow: 0 1px 0 $black;
-$nav-link-hover-background: lighten($red, 5%);
-$nav-link-hover-text: $black;
+$nav-link-hover-background: lighten($blue, 25%);
+$nav-link-active-background: darken($blue, 5%);
+$nav-link-hover-text: $gray;
 $nav-link-hover-shadow: 0 1px 0 rgba($default-link, 0.6);
-$nav-link-active-background: mix($red, $blue, 10%);
 
 $header-color: $white;
-$header-shadow: 0 1px 2px $red;
+$header-shadow: 0 1px 2px $black;
 
 $header-height-default: 95px;
 $header-height-ipad: 170px;
