--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -38,3 +38,11 @@ $max-width-default: em(300);
 $max-width-medium: em(450);
 $max-width-tween: em(670);
 $max-width-large: em(800);
+
+
+// Noon
+$background-noon: linear-gradient(to bottom, rgba(70, 113, 213, 0.8) 75%, rgba(191, 113, 48, 0.8)) fixed;
+$color-noon: #06266f;
+$link-noon: #ff9640;
+$hover-noon: #ffd300;
+$shadow-noon: #2a4480;
