--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -10,15 +10,15 @@ $text-color: darken($black, 20%);
 $default-link: $black;
 $default-link-shadow: 0 1px 0 rgba($blue, 0.4);
 
-$link-hover: rgba($blue, 0.7);
-$link-hover-shadow: 0 1px 0 rgba($blue, 0.9);
+$link-hover: lighten($text-color, 33%);
+$link-hover-shadow: 0 1px 0 rgba($default-link, 0.6);
 
 $nav-link-color: $black;
 $nav-link-shadow: 0 1px 0 $gray;
 $nav-link-active-background: lighten($blue, 15%);
 $nav-link-hover-background: darken($blue, 5%);
-$nav-link-hover-text: lighten($text-color, 33%);
-$nav-link-hover-shadow: 0 1px 0 rgba($default-link, 0.6);
+$nav-link-hover-text: $link-hover;
+$nav-link-hover-shadow: $link-hover-shadow;
 
 $header-color: $white;
 $header-shadow: 1px 1px 2px $black;
