--- a/source/_default.html.erb
+++ b/source/_default.html.erb
@@ -1,12 +1,8 @@
 
-    <div class="vcard" id="hcard-Melanie-Archer">
-      <h2 class="header">
-        <span class="fn">
+      <h2>
           Melanie Archer 
-        </span>
       </h2>
-      <p class="adr">I am a front-end developer (JavaScript, CSS) working on projects near <span class="locality">Oakland</span>, <span class="region">California</span>, <span class="country-name">USA</span>.</p>
-    </div>
+      <p>I am a front-end developer (JavaScript, CSS) working on projects near Oakland, California, USA.</p>
       
           <ul>
             <li><a href="mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos">Contact me</a></li>
@@ -20,10 +16,4 @@
             LinkedIn 
           </a>
         </li>
-        <li>
-          <a href="//github.com/mejarc">
-            GitHub
-          </a>
-        </li>
-        <li><a href="https://docs.google.com/document/d/1QsPVj1R_JERLxkY-Iyact4BD49UcH0PQPh4idJu1y5Q/edit?usp=sharing">R&eacute;sum&eacute;</a></li>
       </ul>
