--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -1,9 +1,8 @@
-    <nav class="nav" role="navigation">
+    <nav role="navigation">
       <span aria-hidden="true" class="icon"></span>
       <ul class="wrapper plain visually-hidden" aria-hidden="true">
-        <li class="item"><%= link_to 'About me', '/about-me/' %></li>
-    
-        <li class="item"><%= link_to 'About this web site', '/about-site/' %></li>
-        <li class="item"><%= link_to 'Ping', 'mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos' %></li>
+        <li><%= link_to 'About me', '/about-me/' %></li>
+        <li><%= link_to 'About this web site', '/about-site/' %></li>
+        <li><%= link_to 'Ping', 'mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos' %></li>
       </ul>
     </nav>
