--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -1,8 +1,8 @@
 ---
 title: Portfolio
 ---
-<h1 class="header"><%= current_page.data.title %></h1>
-<h2 class="header plain">Since 2010</h2>
+<h1><%= current_page.data.title %></h1>
+<h2>Since 2012</h2>
 <dl>
 <% data.portfolio.recent.each do |site| %>
  <dt>
@@ -18,7 +18,7 @@ title: Portfolio
  </dd>
 <% end %>
 </dl>
-<h2 class="header plain">2006 - 2010</h2>
+<h2>Before 2012</h2>
 <dl>
 <% data.portfolio.less_recent.each do |site| %>
  <dt>
@@ -34,7 +34,7 @@ title: Portfolio
  </dd>
 <% end %>
 </dl>
-<h2 class="header plain">R.I.P.</h2>
+<h2>R.I.P.</h2>
 <dl>
 <% data.portfolio.rip.each do |site| %>
   <dt><%= site[1]['name'] %></dt>
@@ -50,5 +50,5 @@ title: Portfolio
 </dl>
 
 
-<h2 class="header plain">Pre-2006</h2>
+<h2>Even earlier</h2>
 <p>Need details? I'll recall some at your request.</p>
