--- a/source/portfolio.html.erb
+++ b/source/portfolio.html.erb
@@ -18,7 +18,7 @@ title: Portfolio
  </dd>
 <% end %>
 </dl>
-<h2>Before 2012</h2>
+<h2>Previously</h2>
 <dl>
 <% data.portfolio.less_recent.each do |site| %>
  <dt>
@@ -48,7 +48,3 @@ title: Portfolio
   </dd>
 <% end %>
 </dl>
-
-
-<h2>Even earlier</h2>
-<p>Need details? I'll recall some at your request.</p>
