38: update to grid
* update layout by removing flexbox
* comment out mobile widths for now

--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -1,8 +1,9 @@
     <nav role="navigation">
       <span aria-hidden="true" class="icon"></span>
-      <ul class="wrapper plain visually-hidden" aria-hidden="true">
+      <ul>
         <li><%= link_to 'About me', '/about-me/' %></li>
-        <li><%= link_to 'About this web site', '/about-site/' %></li>
+        <li><%= link_to 'Portfolio', '/portfolio/' %></li>
         <li><%= link_to 'Ping', 'mailto:mejarc@gmail.com?subject=ping%20from%20twobanjos' %></li>
-      </ul>
+        <li><%= link_to 'About this web site', '/about-site/' %></li>
+        </ul>
     </nav>
