--- a/source/stylesheets/_variables.css.scss
+++ b/source/stylesheets/_variables.css.scss
@@ -1,5 +1,4 @@
-$modular-scale-ratio: $perfect-fourth;
-$modular-scale-base: 1.2em;
+
 
 $white: #fff;
 $black: #282827;
@@ -28,11 +27,11 @@ $header-height-ipad: 170px;
 $header-height-largest: 200px;
 
 $base-font: 1;
-$big-font: modular-scale(3);
-$medium-font: modular-scale(2);
+$big-font: 2.25;
+$medium-font: 1.5;
 
 $base-margin: 12;
-$base-lineheight: modular-scale(2);
+$base-lineheight: 1.5;
 
 $max-width-default: em(300);
 $max-width-medium: em(450);
