--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,8 +1,7 @@
 @charset "utf-8";
-@import "bourbon";
 @import "variables";
 @import "utilities";
 @import "fonts";
 @import "layout";
 @import "navigation";
-@import "theme";
+// @import "theme";
